# PyValidationTalk

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
PyVal/: config.py
notebooks/: demo.ipynb  extras.ipynb  generate_datasets.ipynb  intro.ipynb
reports/: blurb_advertisement.md  slides.html  slides.md
